--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,8 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "mutex": "cpp",
+        "valarray": "cpp"
     }
 }
