--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,6 @@
         "typeinfo": "cpp",
         "mutex": "cpp",
         "valarray": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
